Agentforce/force-app/main/default/objects/SCOTSMAN__c/SCOTSMAN__c.object-meta.xml
<CustomObject>
    <label>SCOTSMAN</label>
    <nameField>
        <displayFormat>SCOT-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCOTSMAN</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>