Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Answer_1_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1_1__c</fullName>
    <label>Answer 1.1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>