Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Answer_1_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_1_2__c</fullName>
    <label>Answer 1.2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>