Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Answer_1_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_1_3__c</fullName>
    <label>Answer 1.3</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>