Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Authority_Score__c.field-meta.xml
<CustomField>
    <fullName>Authority_Score__c</fullName>
    <formula>IF(
  OR(
    NOT(ISBLANK(TEXT(Score_7_1__c))),
    NOT(ISBLANK(TEXT(Score_7_2__c))),
    NOT(ISBLANK(TEXT(Score_7_3__c))),
    NOT(ISBLANK(TEXT(Score_7_4__c))),
    NOT(ISBLANK(TEXT(Score_7_5__c))),
    NOT(ISBLANK(TEXT(Score_7_6__c))),
    NOT(ISBLANK(TEXT(Score_7_7__c)))
  ),
  MAX(
    VALUE(TEXT(Score_7_1__c)),
    VALUE(TEXT(Score_7_2__c)),
    VALUE(TEXT(Score_7_3__c)),
    VALUE(TEXT(Score_7_4__c)),
    VALUE(TEXT(Score_7_5__c)),
    VALUE(TEXT(Score_7_6__c)),
    VALUE(TEXT(Score_7_7__c))
  ),
  NULL
)</formula>
    <inlineHelpText>The total score from the Authority section. Only calculated where all scores are completed.</inlineHelpText>
    <label>Authority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>