Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid</label>
    <referenceTo>Bid__c</referenceTo>
    <relationshipLabel>SCOTSMAN</relationshipLabel>
    <relationshipName>SCOTSMAN</relationshipName>
    <type>Lookup</type>
</CustomField>