Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Competition_Score__c.field-meta.xml
<CustomField>
    <fullName>Competition_Score__c</fullName>
    <formula>IF(
OR(
NOT(ISBLANK(TEXT(Score_2_1__c))),
NOT(ISBLANK(TEXT(Score_2_2__c))),
NOT(ISBLANK(TEXT(Score_2_3__c))),
NOT(ISBLANK(TEXT(Score_2_4__c))),
NOT(ISBLANK(TEXT(Score_2_5__c)))				
),
MAX(
				VALUE(TEXT(Score_2_1__c)),
				VALUE(TEXT(Score_2_2__c)),
				VALUE(TEXT(Score_2_3__c)),
				VALUE(TEXT(Score_2_4__c)),
				VALUE(TEXT(Score_2_5__c))
				),
NULL
)</formula>
    <inlineHelpText>The total score from the Competition section. Only calculated where all scores are completed.</inlineHelpText>
    <label>Competition Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>