Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Date_RFP_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_RFP_Received__c</fullName>
    <formula>Opportunity__r.RFP_Issue_Date__c</formula>
    <label>Date RFP Received</label>
    <type>Date</type>
</CustomField>