Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Money_Score__c.field-meta.xml
<CustomField>
    <fullName>Money_Score__c</fullName>
    <formula>IF(
OR(
NOT(ISBLANK(TEXT(Score_6_1__c))),
NOT(ISBLANK(TEXT(Score_6_2__c))),
NOT(ISBLANK(TEXT(Score_6_3__c))),
NOT(ISBLANK(TEXT(Score_6_4__c)))
),
MAX(
				VALUE(TEXT(Score_6_1__c)),
				VALUE(TEXT(Score_6_2__c)),
				VALUE(TEXT(Score_6_3__c)),
				VALUE(TEXT(Score_6_4__c))
				),
NULL
)</formula>
    <inlineHelpText>The total score from the Money section. Only calculated where all scores are completed.</inlineHelpText>
    <label>Money Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>