Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Need_Score__c.field-meta.xml
<CustomField>
    <fullName>Need_Score__c</fullName>
    <formula>IF(
OR(
NOT(ISBLANK(TEXT(Score_8_1__c))),
NOT(ISBLANK(TEXT(Score_8_2__c)))
),
				MAX(
VALUE(TEXT(Score_8_1__c)),
VALUE(TEXT(Score_8_2__c))
								),
NULL
)</formula>
    <inlineHelpText>The total score from the Need section. Only calculated where all scores are completed.</inlineHelpText>
    <label>Need Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>