Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Opportunity_Score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Score__c</fullName>
    <formula>IF(
OR(
NOT(ISBLANK(TEXT(Score_3_1__c))),
NOT(ISBLANK(TEXT(Score_3_2__c))),
NOT(ISBLANK(TEXT(Score_3_3__c))),
NOT(ISBLANK(TEXT(Score_3_4__c)))
),
MAX(
				VALUE(TEXT(Score_3_1__c)),
				VALUE(TEXT(Score_3_2__c)),
				VALUE(TEXT(Score_3_3__c)),
				VALUE(TEXT(Score_3_4__c))
				),
NULL
)</formula>
    <inlineHelpText>The total score from the Opportunity section. Only calculated where all scores are completed.</inlineHelpText>
    <label>Opportunity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>