Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Question_1_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1_1__c</fullName>
    <defaultValue>&quot;Do we know the customers Key Decision Making Criteria and can we comply with it?&quot;</defaultValue>
    <label>Question 1.1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>