Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Question_1_2__c.field-meta.xml
<CustomField>
    <fullName>Question_1_2__c</fullName>
    <defaultValue>&quot;Do we have approval from our company?&quot;</defaultValue>
    <label>Question 1.2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>