Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Question_1_3__c.field-meta.xml
<CustomField>
    <fullName>Question_1_3__c</fullName>
    <defaultValue>&quot;Do we have relevant references and evidence of capability?&quot;</defaultValue>
    <label>Question 1.3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>