Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Number__c</fullName>
    <label>Question Number</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>