Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RF1_Customer_Credit_Checked__c.field-meta.xml
<CustomField>
    <fullName>RF1_Customer_Credit_Checked__c</fullName>
    <inlineHelpText>Has the customer been credit checked?</inlineHelpText>
    <label>Customer Credit Checked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>