Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RF2_Customer_Financial_Rating__c.field-meta.xml
<CustomField>
    <fullName>RF2_Customer_Financial_Rating__c</fullName>
    <inlineHelpText>Customer financial rating</inlineHelpText>
    <label>Customer Financial Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insolvency risk</fullName>
            </value>
            <value>
                <fullName>Customer plans to sell</fullName>
            </value>
            <value>
                <fullName>Poor financial health, doesn’t pay</fullName>
            </value>
            <value>
                <fullName>Poor financial health, pays on time</fullName>
            </value>
            <value>
                <fullName>Good financial health, doesn’t pay</fullName>
            </value>
            <value>
                <fullName>Good financial health, pays on time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>