Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RF3_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>RF3_Payment_Terms__c</fullName>
    <inlineHelpText>What are the payment terms?</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>