Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RF4_Financial_Model__c.field-meta.xml
<CustomField>
    <fullName>RF4_Financial_Model__c</fullName>
    <inlineHelpText>What is the financial model?</inlineHelpText>
    <label>Financial Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open Book</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Cost Pass Through</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>