Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RF5_Legislative_Change_Allowed__c.field-meta.xml
<CustomField>
    <fullName>RF5_Legislative_Change_Allowed__c</fullName>
    <inlineHelpText>Is legislative change allowed?</inlineHelpText>
    <label>Legislative Change Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>