Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RF6_Financial_Penalty_Scheme__c.field-meta.xml
<CustomField>
    <fullName>RF6_Financial_Penalty_Scheme__c</fullName>
    <inlineHelpText>Is there a financial penalty scheme?</inlineHelpText>
    <label>Financial Penalty Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Max 5% of Annual Revenue</fullName>
            </value>
            <value>
                <fullName>Above 5% of Annual Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>