Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RF7_Commit_to_Saving_Glide_Path__c.field-meta.xml
<CustomField>
    <fullName>RF7_Commit_to_Saving_Glide_Path__c</fullName>
    <inlineHelpText>Are we required to commit to a saving glide path?</inlineHelpText>
    <label>Commit to Saving Glide Path</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>