Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RF_Specific_Requirements_3__c.field-meta.xml
<CustomField>
    <fullName>RF_Specific_Requirements_3__c</fullName>
    <label>Specific Requirements - 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>