Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL1_Liabilities_Capped_Indemnify_Breach__c.field-meta.xml
<CustomField>
    <fullName>RL1_Liabilities_Capped_Indemnify_Breach__c</fullName>
    <inlineHelpText>Are OCS&apos; liabilities under the Contract capped and is it confirmed that we are not being asked to put breaches of contract on an indemnity basis?</inlineHelpText>
    <label>Liabilities Capped, Indemnify Breaches</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>