Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL2_Indirect_Losses_Excluded_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>RL2_Indirect_Losses_Excluded_in_Contract__c</fullName>
    <inlineHelpText>Are indirect and consequential losses excluded under the Contract?</inlineHelpText>
    <label>Indirect Losses Excluded in Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>