Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL3_Intellectual_Property_Protected__c.field-meta.xml
<CustomField>
    <fullName>RL3_Intellectual_Property_Protected__c</fullName>
    <inlineHelpText>Confirm intellectual property rights are adequately protected?</inlineHelpText>
    <label>Intellectual Property Protected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>