Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL3_Risk_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>RL3_Risk_Mitigation__c</fullName>
    <label>Risk Mitigation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>