Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL4_Terminate_for_Breach_or_Insolvency__c.field-meta.xml
<CustomField>
    <fullName>RL4_Terminate_for_Breach_or_Insolvency__c</fullName>
    <inlineHelpText>Can we terminate the Contract: (a) for a material breach; (non-payment) (b) if the client becomes insolvent?</inlineHelpText>
    <label>Terminate for Breach or Insolvency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>