Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL5_Requirement_for_Bonds_or_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>RL5_Requirement_for_Bonds_or_Guarantees__c</fullName>
    <inlineHelpText>Is there a requirement for a performance bonds or parent company guarantees?</inlineHelpText>
    <label>Requirement for Bonds or Guarantees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>