Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL6_Pension_Liabilities_Negotiated__c.field-meta.xml
<CustomField>
    <fullName>RL6_Pension_Liabilities_Negotiated__c</fullName>
    <inlineHelpText>Can pension liabilities be negotiated out of the price?</inlineHelpText>
    <label>Pension Liabilities Negotiated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>