Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL7_Accept_Terms_and_Conditions_in_Full__c.field-meta.xml
<CustomField>
    <fullName>RL7_Accept_Terms_and_Conditions_in_Full__c</fullName>
    <inlineHelpText>Do OCS have to accept the terms and conditions in full?</inlineHelpText>
    <label>Accept Terms and Conditions in Full</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>