Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL8_Assign_Receivables__c.field-meta.xml
<CustomField>
    <fullName>RL8_Assign_Receivables__c</fullName>
    <inlineHelpText>Are we able to assign receivables?</inlineHelpText>
    <label>Assign Receivables</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>