Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RL_Specific_Requirements_1__c.field-meta.xml
<CustomField>
    <fullName>RL_Specific_Requirements_1__c</fullName>
    <label>Specific Requirements - 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>