Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RO1_Mobilise_Within_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>RO1_Mobilise_Within_Timeframe__c</fullName>
    <inlineHelpText>Can we mobilise within specified timeframe?</inlineHelpText>
    <label>Mobilise Within Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>