Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RO2_Operate_to_Customer_Specification__c.field-meta.xml
<CustomField>
    <fullName>RO2_Operate_to_Customer_Specification__c</fullName>
    <inlineHelpText>Can we operate to customer specification?</inlineHelpText>
    <label>Operate to Customer Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>