Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RO3_Meet_KPIs_SLAs__c.field-meta.xml
<CustomField>
    <fullName>RO3_Meet_KPIs_SLAs__c</fullName>
    <inlineHelpText>Can we meet the KPIs / SLAs?</inlineHelpText>
    <label>Meet KPIs / SLAs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>