Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RO4_Hold_Required_Accreditations__c.field-meta.xml
<CustomField>
    <fullName>RO4_Hold_Required_Accreditations__c</fullName>
    <inlineHelpText>Do we hold the required accreditations?</inlineHelpText>
    <label>Hold Required Accreditations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>