Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RO_Specific_Risks_1__c.field-meta.xml
<CustomField>
    <fullName>RO_Specific_Risks_1__c</fullName>
    <label>Specific Risks - 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>