Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RO_Specific_Risks_2__c.field-meta.xml
<CustomField>
    <fullName>RO_Specific_Risks_2__c</fullName>
    <label>Specific Risks - 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>