Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/RO_Specific_Risks_3__c.field-meta.xml
<CustomField>
    <fullName>RO_Specific_Risks_3__c</fullName>
    <label>Specific Risks - 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>