Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Score_1_1__c.field-meta.xml
<CustomField>
    <fullName>Score_1_1__c</fullName>
    <label>Score 1.1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SCOTSMAN_Score</valueSetName>
    </valueSet>
</CustomField>