Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Size_Score__c.field-meta.xml
<CustomField>
    <fullName>Size_Score__c</fullName>
    <formula>IF(
OR(
NOT(ISBLANK(TEXT(Score_5_1__c))),
NOT(ISBLANK(TEXT(Score_5_2__c))),
NOT(ISBLANK(TEXT(Score_5_3__c))),
NOT(ISBLANK(TEXT(Score_5_4__c)))
),
MAX(
				VALUE(TEXT(Score_5_1__c)),
				VALUE(TEXT(Score_5_2__c)),
				VALUE(TEXT(Score_5_3__c)),
				VALUE(TEXT(Score_5_4__c))
				),
NULL
)</formula>
    <inlineHelpText>The total score from the Size section. Only calculated where all scores are completed.</inlineHelpText>
    <label>Size Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>