Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Solution_Score__c.field-meta.xml
<CustomField>
    <fullName>Solution_Score__c</fullName>
    <formula>IF(
  OR(
    NOT(ISBLANK(TEXT(Score_1_1__c))),
    NOT(ISBLANK(TEXT(Score_1_2__c))),
    NOT(ISBLANK(TEXT(Score_1_3__c))),
    NOT(ISBLANK(TEXT(Score_1_4__c))),
    NOT(ISBLANK(TEXT(Score_1_5__c))),
    NOT(ISBLANK(TEXT(Score_1_6__c))),
    NOT(ISBLANK(TEXT(Score_1_7__c)))
  ),
  MAX(
    VALUE(TEXT(Score_1_1__c)),
    VALUE(TEXT(Score_1_2__c)),
    VALUE(TEXT(Score_1_3__c)),
    VALUE(TEXT(Score_1_4__c)),
    VALUE(TEXT(Score_1_5__c)),
    VALUE(TEXT(Score_1_6__c)),
    VALUE(TEXT(Score_1_7__c))
  ),
  NULL
)</formula>
    <inlineHelpText>The total score from the Solution section. Only calculated where all scores are completed.</inlineHelpText>
    <label>Solution Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>