Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Opportunity__r.Contract_Start_Date__c</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>