Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/System_Record_Cloned__c.field-meta.xml
<CustomField>
    <fullName>System_Record_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked once the record has been closed. Used to hide the Clone button when the SCOTSMAN record has already been cloned.</description>
    <label>System: Record Cloned</label>
    <type>Checkbox</type>
</CustomField>