Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/System_RF1_RAG__c.field-meta.xml
<CustomField>
    <fullName>System_RF1_RAG__c</fullName>
    <formula>CASE (TEXT(RF1_Customer_Credit_Checked__c),
&quot;Yes&quot;, IMAGE( &apos;/resource/GreenGoImage&apos;, &apos;Green&apos;,20,40),
&quot;No&quot;, IMAGE( &apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;&quot;)</formula>
    <label>RAG</label>
    <type>Text</type>
</CustomField>