Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/System_RF2_RAG__c.field-meta.xml
<CustomField>
    <fullName>System_RF2_RAG__c</fullName>
    <formula>CASE (TEXT(RF2_Customer_Financial_Rating__c),
&quot;Insolvency risk&quot;,IMAGE( &apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;Customer plans to sell&quot;,IMAGE( &apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;Poor financial health, doesn’t pay&quot;, IMAGE(&apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;Poor financial health, pays on time&quot;, IMAGE(&apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;Good financial health, doesn’t pay&quot;,IMAGE( &apos;/resource/GreenGoImage&apos;, &apos;Green&apos;,20,40),
&quot;Good financial health, pays on time&quot;,IMAGE( &apos;/resource/GreenGoImage&apos;, &apos;Green&apos;,20,40),
&quot;&quot;)</formula>
    <label>RAG</label>
    <type>Text</type>
</CustomField>