Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/System_RF3_RAG__c.field-meta.xml
<CustomField>
    <fullName>System_RF3_RAG__c</fullName>
    <formula>CASE (TEXT(RF3_Payment_Terms__c),
&quot;60&quot;,IMAGE( &apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;90&quot;,IMAGE( &apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;120&quot;, IMAGE(&apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;Multiple&quot;, IMAGE(&apos;/resource/RedRiskImage&apos;, &apos;Red&apos;,20,40),
&quot;30&quot;,IMAGE( &apos;/resource/GreenGoImage&apos;, &apos;Green&apos;,20,40),
&quot;45&quot;,IMAGE( &apos;/resource/GreenGoImage&apos;, &apos;Green&apos;,20,40),
&quot;&quot;)</formula>
    <label>RAG</label>
    <type>Text</type>
</CustomField>