Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Timescales_Score__c.field-meta.xml
<CustomField>
    <fullName>Timescales_Score__c</fullName>
    <formula>IF(
OR(
NOT(ISBLANK(TEXT(Score_4_1__c))),
NOT(ISBLANK(TEXT(Score_4_2__c))),
NOT(ISBLANK(TEXT(Score_4_3__c))),
NOT(ISBLANK(TEXT(Score_4_4__c)))
),
MAX(
				VALUE(TEXT(Score_4_1__c)),
				VALUE(TEXT(Score_4_2__c)),
				VALUE(TEXT(Score_4_3__c)),
				VALUE(TEXT(Score_4_4__c))
				),
NULL
)</formula>
    <inlineHelpText>The total score from the Timescales section. Only calculated where all scores are completed.</inlineHelpText>
    <label>Timescales Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>