Agentforce/force-app/main/default/objects/SCOTSMAN__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <description>Populated by SCOTSMAN After Save flow due to formula character limits. After Save used instead of Before Save because Before Save not compatible with formula field usage.</description>
    <inlineHelpText>Only calculated when all scores are populated</inlineHelpText>
    <label>Total Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>